--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "components": "^0.1.0",
     "core-js": "^2.6.5",
-    "vee-validate": "^2.0.3",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "yarn": "^1.17.3"
   },
   "devDependencies": {
