--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "start": "node server.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "components": "^0.1.0",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
+    "router": "^1.3.3",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
